--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
   <title>Neighborhood Map</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/autocomplete-styles.css">
 </head>
 <body>
   <div id="map-canvas"></div>
+  <div class="searchbar">
+    <form data-bind="submit: processSearch">
+      <input type="text" placeholder="Search for deals in your area" data-bind="value: searchLocation" id="autocomplete">
+      <input type="submit" value="Search" id="submit">
+    </form>
+  </div>
   <div class="results">
     <h2 class="status-msg" data-bind="text: searchStatus"></h2>
     <ul id="results-list" data-bind="visible: mapMarkers().length > 0, foreach: grouponDeals">
@@ -22,6 +29,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCVzYqt4JIDK3C_xMQcNssaEKeDUxf45aA&libraries=places"></script>
   <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/knockout/knockout-3.0.0.js"></script>
+  <script type="text/javascript" src="js/jquery.autocomplete.min.js"></script>
   <script type="text/javascript" src="js/app.js"></script>
 
 </body>
