Add a rating to each listing

--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
         <h4 data-bind="text: dealName"></h4>
         <p class="address" data-bind="html: dealAddress"></p>
         <p data-bind="text: dealShortBlurb"></p>
+        <p>Rating: <span data-bind="text: dealRating"></span> </p>
       </li>
     </ul>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCVzYqt4JIDK3C_xMQcNssaEKeDUxf45aA&libraries=places"></script>
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=places?key=AIzaSyCVzYqt4JIDK3C_xMQcNssaEKeDUxf45aA"></script>
   <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/knockout/knockout-3.0.0.js"></script>
   <script type="text/javascript" src="js/jquery.autocomplete.js"></script>
   <script type="text/javascript" src="js/app.js"></script>
