--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
   <div id="map-canvas"></div>
-  <div class="searchbar">
+
+  <div class="searchbar" data-bind="visible: searchBarShow() === true">
     <form data-bind="submit: processSearch">
       <input type="text" placeholder="Search for deals in your area" data-bind="value: searchLocation" id="autocomplete">
       <input type="submit" value="Search" id="submit">
@@ -36,6 +37,10 @@
   </div>
 
 <!-- Mobile list of results, hidden until media query is activated -->
+  <div class="searchbtn" data-bind="click: searchToggle">
+    <i class="fa fa-search fa-2x"></i>
+  </div>
+
   <div class="mobilebutton" data-bind="click: mobileOpenList">
     <i class="fa fa-bars fa-2x"></i>
   </div>
