--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 
 <!-- Mobile list of results, hidden until media query is activated -->
   <div class="searchbtn" data-bind="click: searchToggle">
-    <i class="fa fa-search fa-2x"></i>
+    <i class="fa fa-search"></i>
   </div>
 
   <div class="mobilebutton" data-bind="click: mobileOpenList">
-    <i class="fa fa-bars fa-2x"></i>
+    <i class="fa fa-bars"></i>
   </div>
 
   <div class="mobileresults" data-bind="visible: mobileShow() === true">
