--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       <p data-bind="text: searchStatus"></p>
     </form>
   </div>
+  <div title="re-center map" class="locbtn-large" data-bind="click: centerMap">
+    <i class="fa fa-compass fa-2x"></i>
+  </div>
   <div class="results">
     <div>
       <h2 class="status-msg" data-bind="text: dealStatus"></h2>
@@ -37,15 +40,15 @@
   </div>
 
 <!-- Mobile list of results, hidden until media query is activated -->
-  <div class="searchbtn" data-bind="click: searchToggle">
+  <div title="toggle search bar" class="searchbtn" data-bind="click: searchToggle">
     <i class="fa fa-search"></i>
   </div>
 
-  <div class="locbtn" data-bind="click: centerMap">
+  <div title="re-center map" class="locbtn" data-bind="click: centerMap">
     <i class="fa fa-compass"></i>
   </div>
 
-  <div class="mobilebutton" data-bind="click: mobileToggleList">
+  <div title="toggle list view" class="mobilebutton" data-bind="click: mobileToggleList">
     <i class="fa fa-bars"></i>
   </div>
 
