--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     <i class="fa fa-compass fa-2x"></i>
   </div>
 
-<!--   <div class="filterresults" data-bind="visible: searchBarShow() === true">
+  <div class="filterresults" data-bind="visible: searchBarShow() === true">
     <form data-bind="submit: filterResults">
       <input type="text" placeholder="Filter deals by type" data-bind="value:filterKeyword, selectOnFocus: true">
       <input type="submit" value="Go!" id="submit">
-      <p data-bind="text: searchStatus"></p>
+      <p data-bind="visible: filterKeyword().length > 0, click: clearFilter" class="clearbutton">Clear filter</p>
     </form>
-  </div> -->
+  </div>
 
   <div class="results">
     <div>
@@ -38,7 +38,7 @@
     </div>
     <div>
       <p class="waiting" data-bind="html: loadImg"></p>
-      <ul id="results-list" data-bind="visible: toggleSymbol() === 'hide', foreach: grouponDeals">
+      <ul id="results-list" data-bind="visible: toggleSymbol() === 'hide', foreach: filteredList">
         <li data-bind="click: $parent.goToMarker">
           <h4 data-bind="text: dealName"></h4>
           <p class="address" data-bind="html: dealAddress"></p>
@@ -48,6 +48,7 @@
       </ul>
     </div>
   </div>
+  <div>
 
 <!-- Mobile list of results, hidden until media query is activated -->
   <div title="toggle search bar" class="searchbtn" data-bind="click: searchToggle">
@@ -68,7 +69,7 @@
     </div>
     <div>
       <p class="waiting" data-bind="html: loadImg"></p>
-      <ul id="results-list" data-bind="visible: toggleSymbol() === 'hide', foreach: grouponDeals">
+      <ul id="results-list" data-bind="visible: toggleSymbol() === 'hide', foreach: filteredList">
         <li data-bind="click: $parent.goToMarker">
           <h4 data-bind="text: dealName"></h4>
           <p class="address" data-bind="html: dealAddress"></p>
