--- a/index.html
+++ b/index.html
@@ -28,10 +28,6 @@
     <i class="fa fa-compass fa-2x"></i>
   </div>
 
-<!--   <div class="filterresults" data-bind="visible: searchBarShow() === true">
-
-  </div> -->
-
   <div class="results">
     <div>
       <h2 class="status-msg" data-bind="text: dealStatus"></h2>
@@ -51,7 +47,7 @@
   </div>
   <div>
 
-<!-- Mobile list of results, hidden until media query is activated -->
+<!-- Mobile list of results, mobile navigation buttons, hidden until media query is activated -->
   <div title="toggle search bar" class="searchbtn" data-bind="click: searchToggle">
     <i class="fa fa-search"></i>
   </div>
@@ -80,6 +76,7 @@
       </ul>
     </div>
   </div>
+
   <!-- Start of StatCounter Code for Default Guide -->
   <script type="text/javascript">
     var sc_project=10304038; 
