--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </form>
   </div>
 
-  <div title="re-center map" class="locbtn-large" data-bind="click: centerMap">
+  <div title="Re-center map" class="locbtn-large" data-bind="click: centerMap">
     <i class="fa fa-compass fa-2x"></i>
   </div>
 
@@ -95,7 +95,7 @@
   alt="web analytics"></a></div></noscript>
   <!-- End of StatCounter Code for Default Guide -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=places?key=AIzaSyCVzYqt4JIDK3C_xMQcNssaEKeDUxf45aA"></script>
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyCVzYqt4JIDK3C_xMQcNssaEKeDUxf45aA"></script>
   <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/knockout/knockout-3.0.0.js"></script>
   <script type="text/javascript" src="js/jquery.autocomplete.js"></script>
   <script type="text/javascript" src="js/app.js"></script>
